
java {
	sourceCompatibility = '21'
}


dependencies {
	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
    implementation 'org.jetbrains:annotations:24.0.0'
}